--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vite-tsconfig-paths": "^5.0.1"
   },
   "dependencies": {
+    "@floating-ui/core": "^1.7.3",
     "@floating-ui/dom": "^1.6.10",
     "date-fns": "^3.6.0",
     "svelte-i18n": "^4.0.0",
